# opengl-test-app

./: LICENSE  README.md
OpenGL-linux/: CMakeLists.txt  main.cpp
OpenGL-windows/: CMakeLists.txt
OpenGL-windows/src/: definitions.h  main.cpp
